--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./node_modules/nouislider/dist/nouislider.css">
   <title>Кекстаграм</title>
 </head>
 
@@ -46,7 +47,7 @@
                   <!-- Изменение размера изображения -->
                   <fieldset class="img-upload__scale  scale">
                     <button type="button" class="scale__control  scale__control--smaller">Уменьшить</button>
-                    <input type="text" class="scale__control  scale__control--value" value="55%" title="Image Scale" name="scale" readonly>
+                    <input type="text" class="scale__control  scale__control--value" value="100%" title="Image Scale" name="scale" readonly>
                     <button type="button" class="scale__control  scale__control--bigger">Увеличить</button>
                   </fieldset>
 
@@ -233,6 +234,7 @@
   </template>
 
   <script src="./node_modules/pristinejs/dist/pristine.min.js" type="text/javascript" ></script>
+  <script src="./node_modules/nouislider/dist/nouislider.js"></script>
   <script src="js/main.js" type="module"></script>
 </body>
 </html>
