--- a/index.html
+++ b/index.html
@@ -233,6 +233,10 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
+  <template id="alert">
+    <div class="alert_message"></div>
+  </template>
+
   <script src="./node_modules/pristinejs/dist/pristine.min.js" type="text/javascript" ></script>
   <script src="./node_modules/nouislider/dist/nouislider.js"></script>
   <script src="js/main.js" type="module"></script>
